--- a/t1/SIT/hyper/pom.xml
+++ b/t1/SIT/hyper/pom.xml
@@ -2,13 +2,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	0000000000000000000jjjjjjjjjjjjjjjjjjjjjjj
+	bnbnmbmm.. 
 	<groupId>com.hm</groupId>
 	<artifactId>web</artifactId>
 	<packaging>war</packaging>
 	<version>1.0.0</version>
 	<name>Hyper Management</name>
 	<build>
+	nbnbmm,.nmj
 		<finalName>hyper</finalName>
+	111111111111111111111111111111111117777777777777777777777777777799999
 	</build>
 	<parent>
 		<groupId>com.gep</groupId>
